src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;900&display=swap');

html,
body {
  padding: 0;
  margin: 0;
  text-rendering: optimizeLegibility;
  @apply bg-white dark:bg-gray-900;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
  text-rendering: optimizeLegibility;
}

::-moz-selection {
  @apply bg-indigo-400 text-white;
}

::selection {
  @apply bg-indigo-400 text-white;
}

